# Open-Fraud-Intelligence-Platform-OFIP

./: CONTRIBUTING.md  LICENSE  Read.md  SYSTEM_FLOW.md  demo.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py
core/: __init__.py  domain_packs.py  engine.py  models.py  plugin_manager.py  settings.py  storage.py  utils.py
data/: ofip.db
data/sample_data/: invoices.json
data/training/: invoice_types.json
ocr/: __init__.py  processor.py
plugins/: __init__.py  example_plugin.py
rules/: initial_rules.md
